Fixed wrapping issue with tooltip and multiple translations when using portions

--- a/src/extension/bg/tooltip.css
+++ b/src/extension/bg/tooltip.css
@@ -1,13 +1,17 @@
 .immerse-tooltip{
     background-color: #1b1f23;
     font-size: 14px;
-    color: #fff;
     border: 1px solid #fff;
     border-radius: 4px;
     text-align: center;
     align-content: center;
     z-index: 999;
+    position: absolute;
 }
 .tooltip-inner{
     padding: 0px 20px 0px 20px;
+    color: #fff;
+}
+.immerse-translation{
+    color:inherit;
 }
